# WaterPhantom

./: BGMSC.cc  CMakeLists.txt  init_vis.mac
include/: BGMSCActionInitialization.hh  BGMSCDetectorConstruction.hh  BGMSCEventAction.hh  BGMSCPhysicsList.hh  BGMSCPrimaryGeneratorAction.hh  BGMSCRunAction.hh  BGMSCSteppingAction.hh  G4IAEAphspReader.hh  G4IAEAphspWriter.hh  iaea_header.hh  iaea_phsp.hh  iaea_record.hh
src/: BGMSCActionInitialization.cc  BGMSCDetectorConstruction.cc  BGMSCEventAction.cc  BGMSCPhysicsList.cc  BGMSCPrimaryGeneratorAction.cc  BGMSCRunAction.cc  BGMSCSteppingAction.cc  G4IAEAphspReader.cc  G4IAEAphspWriter.cc  iaea_header.cc  iaea_phsp.cc  iaea_record.cc  utilities.cc
